# cecs

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  components.yml  depend.sh  entities.yml  main.c  meson.build  module.mk  systems.yml
.github/workflows/: .vimrc  ccpp.yml  pipeline.yml
cmake_modules/: FindJsoncpp.cmake
example_sysfuncs/: module.mk  sys_funcs.c
src/: CMakeLists.txt  arr.h  cecs.c  cecs.h  cecs_component.c  cecs_component.h  cecs_entity.c  cecs_entity.h  cecs_err.c  cecs_err.h  cecs_system.c  cecs_system.h  comp_gen.c  entity_load.c  main.c  main.cpp  openbsd-reallocarray.c  openbsd-reallocarray.h  state.h  statemanager.c  statemanager.h  system_load.c
src/comp_gen/: comp_gen.c  module.mk
src/components/: cecs_component.c  cecs_component.h  cecs_component_key.h  comp_gen.c  components.h
src/core/: cecs.c  cecs.h  cecs_err.c  cecs_err.h  openbsd-reallocarray.h  yaml_helper.c  yaml_helper.h
src/entities/: cecs_entity.c  cecs_entity.h  entity_load.c  entity_load.h
src/systems/: cecs_system.c  cecs_system.h  gravity.c  gravity.h  system_load.c  system_load.h
src/tests/: arr_check.c  arr_check.h  check_check.c  check_check.h  check_initilised.c  check_initilised.h  check_main.c  comp_yaml_check.c  comp_yaml_check.h  ent_yaml_check.c  ent_yaml_check.h  module.mk  runner.c  sys_yaml_check.c
tests/: .vimrc  CMakeLists.txt  arr_check.c  cecs_check.c  cecs_check.h  check_check.c  check_main.c  comp_yaml_check.c  ent_yaml_check.c  runner.c  runner.h  sys_yaml_check.c  sys_yaml_check.h  yaml_check.c  yaml_check.h
